webui/k8s/01-respeer-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: respeer-webui
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: respeer-webui
  template:
    metadata:
      labels:
        app: respeer-webui
    spec:
      containers:
        - name: respeer-webui
          image: DOCKER_REGISTRY/linera/respeer-webui:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: respeer-webui
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: respeer-webui
