webui/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: respeer-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: respeer-webui
    k8s.kuboard.cn/workload: respeer-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.hk.testnet-archimedes.respeer.ai'
        - 'hk.testnet-archimedes.respeer.ai'
      secretName: hk-testnet-archimedes-respeer-ai-tls
  rules:
    - host: hk.testnet-archimedes.respeer.ai
      http:
        paths:
          - path: /
            backend:
              serviceName: respeer-webui
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: respeer-webui-testnet-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: respeer-testnet-webui
    k8s.kuboard.cn/workload: respeer-testnet-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.testnet-archimedes.respeer.ai'
        - 'testnet-archimedes.respeer.ai'
      secretName: testnet-archimedes-respeer-ai-tls
  rules:
    - host: testnet-archimedes.respeer.ai
      http:
        paths:
          - path: /
            backend:
              serviceName: respeer-webui
              servicePort: 80
